cluster/apps/default/shhh/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shhh
  name: shhh
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shhh
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: shhh
    spec:
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      containers:
        - name: shhh
          image: ghcr.io/yoyostile/shhh:latest
          imagePullPolicy: Always
          # Sized from 30 days of observed usage.
          resources:
            requests:
              cpu: 10m
              memory: 192Mi
            limits:
              memory: 320Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
