cluster/apps/default/shhh/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shhh
  namespace: default
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: shhh
