cluster/apps/default/shhh/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shhh
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "safe-square-outline"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflarewarp@kubernetescrd"
    external-dns/external: "true"
spec:
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - shhh.${SECRET_LAB_DOMAIN}
  rules:
    - host: shhh.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: shhh
                port:
                  name: http
